--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -18,6 +18,177 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="12" data-price="16.71">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Q5T6ZT"><img src="https://m.media-amazon.com/images/I/51Fev7UsQLL._SR400,400_.jpg" alt="Leiqin in-Ear Wooden Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>12% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Q5T6ZT">Leiqin in-Ear Wooden Headphones Blanced Bass Stereo Earbuds Orange Firework Pattern Plus Size Wired Earphones</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.71</span><span class="ori_price">$18.99</span></address>
+      <p><span>Take <strong>12% off at $18.99</strong> with promo code: <strong>12GRZ39N</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Q5T6ZT">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2w0d9Q5"><img src="https://m.media-amazon.com/images/I/612TZW7qijL._SR400,400_.jpg" alt="Acekool 50hr Wireless Headphones Over-Ear" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2w0d9Q5">Acekool 50hr Wireless Headphones Over-Ear, HiFi Stereo Bluetooth Headset, Crystal Clear Sound</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.99</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>60% off at $39.99</strong> with promo code: <strong>602VHWK9</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2w0d9Q5">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="49.29">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LO4N90"><img src="https://m.media-amazon.com/images/I/51JBG6+53ZL._SR400,400_.jpg" alt="Home Camera" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LO4N90">Home Camera, 1080P IP Cloud Wireless Alexa Security Camera with Optimized Night Vision, Motion Tracking Capabilities</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$49.29</span><span class="ori_price">$57.99</span></address>
+      <p><span>Take <strong>15% off at $57.99</strong> with promo code: <strong>15GDY3A6</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LO4N90">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LJHSLN"><img src="https://m.media-amazon.com/images/I/61ZeHX0xs0L._SR400,400_.jpg" alt="AGSDON Walking Sneakers for Women" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LJHSLN">AGSDON Walking Sneakers for Women, Lightweight Running Shoes</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.99</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>60% off at $39.99</strong> with promo code: <strong>60M5ZFIU</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LJHSLN">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="34.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WbfHcI"><img src="https://m.media-amazon.com/images/I/418GLEXFs8L._SR400,400_.jpg" alt="FiTONIC Fit Vanilla and Lucuma Collagen Protein Powder" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WbfHcI">FiTONIC Fit Vanilla and Lucuma Collagen Protein Powder | Best Tasting Whey Protein Powder For Women | Gluten, Soy, and RBST-Free Post Workout Shake</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$34.40</span><span class="ori_price">$43.00</span></address>
+      <p><span>Take <strong>20% off at $43.00</strong> with promo code: <strong>20FITONIC</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WbfHcI">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="59.69">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Q6wPuN"><img src="https://m.media-amazon.com/images/I/61xRY1-ZldL._SR400,400_.jpg" alt="13 x 13 Ft Canopy Sun Shade Shelter" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Q6wPuN">13 x 13 Ft Canopy Sun Shade Shelter with 4 Person Inner Tent & Side Wall for Yard Party Picnic Camping Garden</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$59.69</span><span class="ori_price">$199.99</span></address>
+      <p><span>Take <strong>70% off at $199.99</strong> with promo code: <strong>70ZSONDN</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Q6wPuN">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="7.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YyiDO5"><img src="https://m.media-amazon.com/images/I/61y1OPm2hgL._SR400,400_.jpg" alt="Universal Socket" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YyiDO5">Universal Socket, Self-adjusting Socket Fits Standard 1/4'' - 3/4'' Metric 7mm-19mm, Adapter Socket for Wrench Ratchet</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.95</span><span class="ori_price">$9.95</span></address>
+      <p><span>Take <strong>20% off at $9.95</strong> with promo code: <strong>208RWUUU</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YyiDO5">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="56.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JLjAyK"><img src="https://m.media-amazon.com/images/I/51+hhBIvVFL._SR400,400_.jpg" alt="Security Camera" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JLjAyK">Reolink Keen 1080p HD 100% Wire Free Battery Powered Wireless Pan Tilt Indoor Home IP Security Camera...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$56.99</span><span class="ori_price">$94.99</span></address>
+      <p><span>Take <strong>40% off at $94.99</strong> with promo code: <strong>409VIM6A</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JLjAyK">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="22.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HnctL2"><img src="https://m.media-amazon.com/images/I/61ropeAEn7L._SR400,400_.jpg" alt="MYUANGO Monocular Telescope" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HnctL2">MYUANGO Monocular Telescope 40X60 High-Definition Wide View High Power & with Universal Smartphone Holder</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$22.50</span><span class="ori_price">$50.00</span></address>
+      <p><span>Take <strong>55% off at $50.00</strong> with promo code: <strong>55NQXG8N</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HnctL2">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="10" data-price="15.29">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2HkV9WY"><img src="https://m.media-amazon.com/images/I/71joB44M-gL._SR400,400_.jpg" alt="Oraganix Fractionated Coconut Oil" /></a>
