--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -50,6 +50,12 @@
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
   .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_red{margin-left:10px;position:relative;display:inline;background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_red>.tooltip-content{visibility:hidden;width:300px;background:#ff4d4d;padding:1px 5px;color:white;text-align:center;position:absolute;z-index:1;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_red:hover>.tooltip-content{visibility: visible;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_green{margin-left:10px;position:relative;display:inline;background:#87c442;color:#fff;padding:0 10px;border-radius:10px}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_green>.tooltip-content{visibility:hidden;width:400px;background:#87c442;padding:1px 5px;color:white;text-align:center;position:absolute;z-index:1;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_green:hover>.tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
@@ -95,6 +101,9 @@
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
   .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip{margin-left:10px;position:relative;display:inline;background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip>.tooltip-content{visibility:hidden;width:300px;background:#ff4d4d;padding:1px 5px;color:white;text-align:center;position:absolute;z-index:1;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip:hover>.tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>p{display:inline;border-bottom:0.4em solid rgba(255,0,0,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;}
@@ -144,7 +153,7 @@
   .coupons .coupons_wrap .card .inner .org_price{color:#616161;text-decoration:line-through;}
   .coupons .coupons_wrap .card .inner strong{display:block;color:#08f;font-weight:bold;font-size:25px;border:1px solid #08f;padding:5px 20px;text-align:center;}
   .coupons .coupons_wrap .card .inner h3{font-weight:bold;line-height:1.2;margin-top:5px;}
-  .coupons .coupons_wrap .card .inner h3>a{text-decoration:none;color:#000;font-size:17px;}
+  .coupons .coupons_wrap .card .inner h3>a{text-decoration:none;color:#08f;font-size:17px;}
   .coupons .coupons_wrap .card .inner p{margin:10px 0;line-height:1.2;height:4.8em;overflow:hidden;}
   .coupons .coupons_wrap .card .inner p>a{text-decoration:none;color:#08f;}
   .coupons .coupons_wrap .card .inner .inner4deals{height:auto;}
