--- a/app/views/deals/coupons.html.erb
+++ b/app/views/deals/coupons.html.erb
@@ -27,9 +27,8 @@
         </div>
         
         <div class="coupons_wrap">
-          
+          <%= render 'deals/body_coupon_deals' %>
           <%= render 'deals/body_coupon' %>
-          
         </div><!--./coupons_wrap-->
       </div><!--./rt_cnt-->
     </div><!--./wrap-->
