--- a/app/views/blogs/_side_codes.html.erb
+++ b/app/views/blogs/_side_codes.html.erb
@@ -13,14 +13,27 @@
 
 <div class="tab-menu-box clearfix">
   <div class="tab-menu-img">
-   <a target="_blank" href="https://amzn.to/2HkvVrG"><img src="https://images-na.ssl-images-amazon.com/images/I/51piyTl26tL._SX679_.jpg" alt="Fast Wireless Charger"></a>
+   <a target="_blank" href="https://amzn.to/2YsRWdI"><img src="https://images-na.ssl-images-amazon.com/images/I/51VYQlSYpEL._SX522_.jpg" alt="True Wireless Earbuds" /></a>
   </div>
   <div class="inner">
-    <a target="_blank" href="https://amzn.to/2HkvVrG">
-      <p>Fast Wireless Charger, Hokonui Portable Power Bank 10000 mAh</p>
-      <span>$23.79<em>$33.99(30% off)</em><span>
+    <a target="_blank" href="https://amzn.to/2YsRWdI">
+      <p>True Wireless Earbuds, 20H Playtime</p>
+      <span>$44.63<em>$46.98(5% off)</em><span>
     </a>
-    <address>Code: 3KHOKONUI</address>            
+    <address>Code: 05NPB63Q</address>            
+  </div>
+</div>
+
+<div class="tab-menu-box clearfix">
+  <div class="tab-menu-img">
+   <a target="_blank" href="https://amzn.to/2VGVP1W"><img src="https://m.media-amazon.com/images/I/51QpEkfS8oL._SR400,400_.jpg" alt="KEXIN 64GB USB Flash Drive" /></a>
+  </div>
+  <div class="inner">
+    <a target="_blank" href="https://amzn.to/2VGVP1W">
+      <p>KEXIN 64GB USB Flash Drive</p>
+      <span>$11.19<em>$13.99(20% off)</em><span>
+    </a>
+    <address>Code: 20HEHVVV</address>            
   </div>
 </div>
 
@@ -47,19 +60,6 @@
       <span>$39.09<em>$45.99(15% off)</em><span>
     </a>
     <address>Code: 158QL3AI</address>            
-  </div>
-</div>
-
-<div class="tab-menu-box clearfix">
-  <div class="tab-menu-img">
-   <a target="_blank" href="https://amzn.to/2VqnUp1"><img src="https://m.media-amazon.com/images/I/51YHfwFElLL._SR400,400_.jpg" alt="Clazio Internet Radio Home Smart Speaker" /></a>
-  </div>
-  <div class="inner">
-    <a target="_blank" href="https://amzn.to/2VqnUp1">
-      <p>Clazio Internet Radio Home Smart Speaker</p>
-      <span>$89.99<em>$119.99(25% off)</em><span>
-    </a>
-    <address>Code: 25SFHWZB</address>            
   </div>
 </div>
 
