--- a/app/views/blogs/_side_deals.html.erb
+++ b/app/views/blogs/_side_deals.html.erb
@@ -12,24 +12,36 @@
 
 <div class="tab-menu-box clearfix">
   <div class="tab-menu-img">
-   <a target="_blank" href="https://amzn.to/2Q847cS"><img src="https://images-na.ssl-images-amazon.com/images/I/519AkRwE2pL._SX679_.jpg" alt="August Smart Lock Pro + Connect" /> </a>
+   <a target="_blank" href="https://amzn.to/2VgnLVd"><img src="https://images-na.ssl-images-amazon.com/images/I/41g4Idd4y9L._SY606_.jpg" alt="Apple AirPods with Charging Case" /> </a>
   </div>
   <div class="inner deals">
-    <a target="_blank" href="https://amzn.to/2Q847cS">
-      <p>August Smart Lock Pro + Connect</p>
-      <span>$263.44<em>$279.99(6% off)</em><span>
+    <a target="_blank" href="https://amzn.to/2VgnLVd">
+      <p>Apple AirPods with Charging Case</p>
+      <span>$139.99<em>$159.00(12% off)</em><span>
     </a>
   </div>
 </div>
 
 <div class="tab-menu-box clearfix">
   <div class="tab-menu-img">
-   <a target="_blank" href="https://amzn.to/2W4xP81"><img src="https://images-na.ssl-images-amazon.com/images/I/81QA5YHAE0L._SX522_.jpg" alt="SteelSeries Arctis 3 (2019 Edition) All-Platform Gaming Headset" /> </a>
+   <a target="_blank" href="https://amzn.to/2VfuDXK"><img src="https://m.media-amazon.com/images/I/61bF5yoPRGL._AC_UL436_.jpg" alt="SanDisk 256GB Ultra MicroSDXC UHS-I Memory Card with Adapter" /></a>
   </div>
   <div class="inner deals">
-    <a target="_blank" href="https://amzn.to/2W4xP81">
-      <p>SteelSeries Arctis 3 (2019 Edition) All-Platform Gaming Headset</p>
-      <span>$59.00<em>$69.99(16% off)</em><span>
+    <a target="_blank" href="https://amzn.to/2VfuDXK">
+      <p>Products_Title</p>
+      <span>$37.99<em>$44.79(15% off)</em><span>
+    </a>
+  </div>
+</div>
+
+<div class="tab-menu-box clearfix">
+  <div class="tab-menu-img">
+   <a target="_blank" href="https://amzn.to/2VinQMY"><img src="https://m.media-amazon.com/images/I/6149LTqv1AL._AC_UL436_.jpg" alt="SanDisk Ultra Flair 128GB USB 3.0 Flash Drive" /> </a>
+  </div>
+  <div class="inner deals">
+    <a target="_blank" href="https://amzn.to/2VinQMY">
+      <p>SanDisk Ultra Flair 128GB USB 3.0 Flash Drive</p>
+      <span>$19.99<em>$24.76(19% off)</em><span>
     </a>
   </div>
 </div>
@@ -58,17 +70,7 @@
   </div>
 </div>
 
-<div class="tab-menu-box clearfix">
-  <div class="tab-menu-img">
-   <a target="_blank" href="https://amzn.to/2YuRVWL"><img src="https://images-na.ssl-images-amazon.com/images/I/91-T%2BsiOaOL._SX522_.jpg" alt="Fujifilm Instax Square SQ10 Hybrid Instant Camera" /> </a>
-  </div>
-  <div class="inner deals">
-    <a target="_blank" href="https://amzn.to/2YuRVWL">
-      <p>Fujifilm Instax Square SQ10 Hybrid Instant Camera</p>
-      <span>$119.95<em>$279.00(57% off)</em><span>
-    </a>
-  </div>
-</div>
+
 
 <div class="blog_side_more">
  <a target="_blank" href="/deals/coupons">See More</a>
