--- a/app/views/deals/_body_coupon_deals.html.erb
+++ b/app/views/deals/_body_coupon_deals.html.erb
@@ -14,6 +14,52 @@
   </div>
 </div> -->
 
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2YzvDD7"><img src="https://m.media-amazon.com/images/I/51XH1HqXn6L._AC_UL436_.jpg" alt="Lasko 2511 36″ Tower Fan" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2YzvDD7">Lasko 2511 36″ Tower Fan with Remote Control - Features 3 Whisper Quiet Speeds and Built-in Timer</a></p>
+    <span class="dis_price">$29.42</span><span class="org_price">$59.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2YzvDD7">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2LReljv"><img src="https://m.media-amazon.com/images/I/71Z3n0aYd9L._AC_UL320_.jpg" alt="Nature's Way Primadophilus Fortify Women's Probiotic" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2LReljv">Nature's Way Primadophilus Fortify Women's Probiotic, 30 Billion Live Cultures,Acidophilus, Guaranteed Potency, Researched Strains</a></p>
+    <span class="dis_price">$11.99</span><span class="org_price">$23.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2LReljv">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2JMvDMb"><img src="https://images-na.ssl-images-amazon.com/images/I/61xB8p7N5CL._SX522_.jpg" alt="Logitech G502 HERO High Performance Gaming Mouse" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>26% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2JMvDMb">Logitech G502 HERO High Performance Gaming Mouse</a></p>
+    <span class="dis_price">$59.38</span><span class="org_price">$79.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2JMvDMb">Shop Now</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-tags="Deals">
   <div class="img_box">
      <a target="_blank" href="https://amzn.to/2Q847cS"><img src="https://images-na.ssl-images-amazon.com/images/I/519AkRwE2pL._SX679_.jpg" alt="August Smart Lock Pro + Connect" /> </a>
