--- a/app/views/deals/coupons.html.erb
+++ b/app/views/deals/coupons.html.erb
@@ -13,6 +13,7 @@
           <ul>
             <li>Amazon offers thousand of coupons every single day<br /><a target="_blank" href="https://amzn.to/2GI08RX">(Amazon Coupon Terms & Conditions)</a></li>
             <li>Deals & pricing may change or expire at anytime.</li>
+            <li>We have just made your life easier. We offer a quick way to find the best deals. You'll find what you're looking for at a great price.</li>
             <li>Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</li>
           </ul>
         </div>
