--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -16,6 +16,7 @@
                 <li>Deals & pricing may change or expire at anytime.</li>
                 <li>Some of promotion codes can expire fast.</li>
                 <li>Free Shipping: Prime or $25+ of all other eligible items.<a target="_blank" href="/blogs/blog_01">(What's PRIME?)</a></li>
+                <li>We have just made your life easier. We offer a quick way to find the best deals. You'll find what you're looking for at a great price.</li>
                 <li>Oh,igottabuythis is a participant in the Amazon Services LLC Associates Program & the Amazon EU Associates Programme, an affiliate advertising program designed to provide a means for us to earn fees by linking to Amazon.com, Amazon.ca, Amazon.co.uk and affiliated sites.</li>
                 <li>Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</li>
               </ul>
@@ -28,6 +29,13 @@
                 <li>Click "Buy Now or Add to Cart"</li>
                 <li>Enter your promotional code into the box of "Gift cards & promotional codes"</li>
                 <!-- <li>Proceed with payment then the code is automatically applied.</li> -->
+                <li class="about_db_dis">
+                  <p>What is "Double Discount"</p>
+                  <span class="dou_red">Double Discount</span>
+                  <em>You can get extra discount by applying promotional code to the product that is being discounting.</em>
+                  <span class="dou_green">Double Discount</span>
+                  <em>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</em>
+                </li>
               </ul>
             </li>
             <li class="last7days">
