--- a/app/views/deals/promotions.html.erb
+++ b/app/views/deals/promotions.html.erb
@@ -9,6 +9,8 @@
           <h2>Promotions</h2>
           <div class="note">
             <ul>
+              <li> We've put together a list of events and special offers to give you a simple way to take advantage of promotions across our website.</li>
+              <li>We have just made your life easier. We offer a quick way to find the best deals. You'll find what you're looking for at a great price.</li>
               <li>Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</li>
             </ul>
           </div>
