--- a/app/views/deals/_body_coupon_deals.html.erb
+++ b/app/views/deals/_body_coupon_deals.html.erb
@@ -17,6 +17,37 @@
 
 <div class="card clearfix" data-tags="Deals">
   <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2W6b2sN"><img src="https://images-na.ssl-images-amazon.com/images/I/515RyTxSGkL._SX522_.jpg" alt="Apple Watch Series 3 (GPS, 38mm)" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>29% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2W6b2sN">Apple Watch Series 3 (GPS, 38mm) - Silver Aluminium Case with White Sport Band</a></p>
+    <span class="dis_price">$199.00</span><span class="org_price">$279.00</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2W6b2sN">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2W9fXJf"><img src="https://images-na.ssl-images-amazon.com/images/I/71l21XusvRL._SY879_.jpg" alt="Arlo Baby Monitor" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>34% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2W9fXJf">Arlo Baby Monitor | Smart WIFI Baby Camera 1080P HD with 2-Way Audio, Night Vision, Air Sensors, Lullaby Player, Night Light, Works with Amazon Alexa</a></p>
+    <span class="dis_price">$132.99</span><span class="org_price">$199.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2W9fXJf">Shop Now</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
      <a target="_blank" href="https://amzn.to/2YzvDD7"><img src="https://m.media-amazon.com/images/I/51XH1HqXn6L._AC_UL436_.jpg" alt="Lasko 2511 36″ Tower Fan" /> </a>
   </div>
   <div class="inner">
