--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -129,6 +129,8 @@
 }
 
 @media screen and (min-width:641px) and (max-width:1199px){
+  .codes .lt_cnt .toggle>ul>.last7days{display:block;}
+  .codes .lt_cnt .last7days_pc{display:none;}
   .codes .card_wrap .card .inner>p>a{font-size:15px;font-weight:300;}
   .codes .lt_cnt .toggle>ul>li>ul>li>a{text-decoration:none;color:#000;display:block;}
   .codes .lt_cnt .lt_sort_box.on{display:none;}
@@ -209,6 +211,7 @@
 
 @media screen and (min-width:641px) and (max-width:1199px){
   .coupons .rt_cnt .cnt_box.on{display:none;}
+  .coupons .coupons_wrap .card .inner{width:54%;}
   .coupons .coupons_wrap .card .info_box{width:23%;}
   .coupons .coupons_wrap .card .info_box p{font-size:55px;padding:10px 0;}
   .coupons .coupons_wrap .card .info_box .img_box{width:165px;}
