--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -107,6 +107,7 @@
   .featured .sm_pc.on{width:25.3%;}
   .featured .sm_pc .filter-search{padding:3px 10px;}
   .featured .sm_pc .filter-button{font-size:27px;}
+  .featured .filter-group .filter-node .inner h3{font-size:15px;}
 	.featured .gift_guide .gift_box{height:auto;}
 	.featured .gift_guide .gift_box .inner{margin:20% 15%;}
 	.featured .filter-group .filter-node .inner em{font-size:10px;}
@@ -116,7 +117,7 @@
 /* End Featured Main Page */
 
 /* Begin Featured Detail Page */
-.cu_wrap{float:left;width:70%;margin-top:300px;font-family: 'Montserrat', sans-serif;}
+.cu_wrap{/*float:left;width:70%;*/margin-top:300px;font-family: 'Montserrat', sans-serif;}
 .cu_wrap .detitle{margin:0 0 100px 100px;color:#000;width:70%;}
 .cu_wrap .detitle h2{font-size:30px;display:inline;border-bottom:0.4em solid rgba(0,168,225,0.2);position:relative;}
 .cu_wrap .detitle h2 span{position:relative;top:0.4em;}
@@ -449,6 +450,7 @@
   .blogs .blog_side .gadget_blog img{height:80px;}
   .blogs .blog_side .title-tab-menu{font-size:14px;}
   .blogs .blog_side .tab-menu-img{height:80px;}
+  .blogs .blog_body .blog_tit .inner_btn a{padding:10px 27px;}
   .blogs .blog_side .tab-menu-box .inner span em{display:block;width:100%;}
   .blogs .blog_side .tab-menu-box .inner address{font-size:15px;}
 }
