--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -222,7 +222,7 @@
 /* Section Quick Search */
 .quicksearch{}
 .quicksearch .rt_cnt{}
-.quicksearch .rt_cnt .tg{width:98%;margin:0 1%;border-collapse:collapse;border-spacing:0;border-color:#ccc;}
+.quicksearch .rt_cnt .tg{width:98%;margin:0 1% 200px 1%;border-collapse:collapse;border-spacing:0;border-color:#ccc;}
 .quicksearch .rt_cnt .tg tr{}
 .quicksearch .rt_cnt .tg tr th{font-size:15px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#000;background-color:#f0f0f0;}
 .quicksearch .rt_cnt .tg tr td{font-size:15px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;}
