--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -275,20 +275,19 @@ header .gnb_m,header .gnb_open2{display:none;}
 /* category */
 .category_wrap{margin-top:250px;}
 
-
 /*search*/
 .search_box input{font-size:35px;padding:10px;margin-left:20px;border:none;border-bottom:1px solid #ccc;}
-
 @media screen and (max-width:640px){
   .search_box input{font-size:15px;padding:5px;margin-left:5%;}
 }
-
 @media screen and (min-width:641px) and (max-width:1199px){
   .search_box input{font-size:20px;padding:5px;}
 }
 
-
-
+.pagination{}
+.pagination a{font-size:20px;text-decoration:none;color:#000;margin:0 0.5%;}
+.pagination a.next_page,.pagination a.previous_page{font-size:15px;}
+.pagination .current{background:#000;color:#fff;font-size:30px;border:1px solid;padding:0 10px;}
 
 
 
