--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -9,6 +9,7 @@
     <div class="code_high">
       <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Origianl_price</span></address>
       <p><span>Take <strong>percentage% off at $Origianl_price</strong> with promo code: <strong>promo_code</strong></span></p>
+      <span class="ex_date">Expiration Date : End_date</span>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
