--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -667,7 +667,7 @@
   </div>
 </div>
 
-<div class="card clearfix" data-score="51" data-price="discounted_price">
+<div class="card clearfix" data-score="51" data-price="21.03">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Yy0f80"><img src="https://m.media-amazon.com/images/I/61iIQclO7wL._SR400,400_.jpg" alt="Oral Irrigator" /></a>
   </div>
@@ -676,7 +676,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Yy0f80">Lächen Portable&Cordless Rechargeable Oral Irrigator 3 Modes Electric Dental Water Flosser </a></p>
     <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$42.92</span></address>
+      <address><span class="dis_price">$21.03</span><span class="ori_price">$42.92</span></address>
       <p><span>Take <strong>51% off at $42.92</strong> with promo code: <strong>51JM1HYR</strong></span></p>
       <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
