--- a/app/views/deals/_body_coupon_deals.html.erb
+++ b/app/views/deals/_body_coupon_deals.html.erb
@@ -1,4 +1,3 @@
-
 <!-- <div class="card clearfix" data-tags="Deals">
   <div class="img_box">
      <a target="_blank" href="Product_Link"><img src="Image_link" alt="" /> </a>
@@ -14,6 +13,65 @@
   </div>
 </div> -->
 
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2VQld58"><img src="https://images-na.ssl-images-amazon.com/images/I/71yrbA2S9mL._SX679_.jpg" alt="samsung QLED TV" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2VQld58">Samsung QN49Q60RAFXZA Flat 49'' QLED 4K Q60 Series (2019)</a></p>
+    <span class="dis_price">$797.99</span><span class="org_price">$999.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2VQld58">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2Q96sEs"><img src="https://images-na.ssl-images-amazon.com/images/I/71CpHM5DXiL._SX679_.jpg" alt="Sony 4K Ultra HD Smart LED TV" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>31% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2Q96sEs">Sony XBR70X830F 70-Inch 4K Ultra HD Smart LED TV</a></p>
+    <span class="dis_price">$1,098.00</span><span class="org_price">$500.00</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2Q96sEs">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2JNLE4k"><img src="https://images-na.ssl-images-amazon.com/images/I/61-t0S5YJKL._SX522_.jpg" alt="New Microsoft Surface Go" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>14% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2JNLE4k">New Microsoft Surface Go (Intel Pentium Gold, 4GB RAM, 128GB)</a></p>
+    <span class="dis_price">$429.00</span><span class="org_price">$499.00</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2JNLE4k">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2VQBbMA"><img src="https://images-na.ssl-images-amazon.com/images/I/51x4j48wCpL._SY606_.jpg" alt="Apple iPad" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>7% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2VQBbMA">Apple iPad (Wi-Fi, 128GB) - Space Gray (Latest Model)</a></p>
+    <span class="dis_price">$398.00</span><span class="org_price">$429.00</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2VQBbMA">Shop Now</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-tags="Deals">
   <div class="img_box">
