--- a/app/views/blogs/_sidebar.html.erb
+++ b/app/views/blogs/_sidebar.html.erb
@@ -10,7 +10,7 @@
 <div class="bd_wrap clearfix">
   <div class="tab-menu-wrap">
     <div class="title-tab-menu">
-      <h2><span>Top 5</span> Amazon Deals</h2>
+      <h2><span>Trending</span> Deals</h2>
     </div>
 
     <div class="tab-menu-wp">
