--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -120,6 +120,7 @@
   .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>p{display:inline;border-bottom:0.4em solid rgba(255,0,0,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;}
+  .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;}
   .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;}
   .codes .card_wrap .card .deal_btn{float:none;width:100%;padding:7px;margin-top:10px;}
   .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#616161;margin:20px 0 0 0;border:1px solid;padding:7px 20px;}
@@ -187,8 +188,8 @@
   /*.coupons .coupons_wrap{column-width:170px;column-gap:5px;}*/
   .coupons .coupons_wrap .card{border-radius:5px;display:inline-block;margin:0;margin-bottom:15px;padding:15px;box-shadow: 1px 1px 3px rgba(0,0,0,0.5);}
   .coupons .coupons_wrap .card .info_box{font-family: 'Montserrat', sans-serif;float:none;width:100%;padding:10px 5%;text-align:center;background:#fff;color:#000;}
-  .coupons .coupons_wrap .card .img_box{float:none;width:100;height:auto;padding:1.5%;}
-  .coupons .coupons_wrap .card .img_box img{width:100%;height:auto;object-fit:contain;}
+  .coupons .coupons_wrap .card .img_box{float:none;width:100%;height:auto;padding:1.5%;text-align:center;}
+  .coupons .coupons_wrap .card .img_box img{width:70%;height:300px;object-fit:contain;}
   .coupons .coupons_wrap .card .info_box p{font-size:70px;font-weight:500;line-height:1;}
   .coupons .coupons_wrap .card .info_box em{}
   .coupons .coupons_wrap .card .info_box a{text-decoration:none;color:#000;}
@@ -196,6 +197,7 @@
   .coupons .coupons_wrap .card .info_box img{width:100%;height:auto;}
   .coupons .coupons_wrap .card .info_box strong{background:#000;color:#fff;border-radius:10px;padding:0 10px;display:block;margin:5px auto;}
   .coupons .coupons_wrap .card .inner{float:none;width:100%;padding:0;font-family: 'Montserrat', sans-serif;font-weight:400;}
+  .coupons .coupons_wrap .card .inner strong{display:block;color:#08f;font-weight:bold;font-size:17px;border:1px solid #08f;padding:5px 20px;text-align:center;margin-top:5px;}
   .coupons .coupons_wrap .card .inner h3>a{text-decoration:none;color:#000;}
   .coupons .coupons_wrap .card .inner .regular{color:#000;font-size:17px;border-bottom:2px solid #000;}
   .coupons .coupons_wrap .card .inner .regular em{background:#000;padding:0 5px;color:#fff;}
